changed default theme as pixel and removed the toggle button

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode | default "en" }}">
+<html lang="{{ .Site.LanguageCode | default "en" }}" data-theme="pixel">
 {{ partial "head.html" . }}
 <body onload="setPixelFont()">
   {{ partial "nav.html" . }}
