--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 <div class="container p-fixed" style="z-index:3">
   <nav class="navbar m-2 p-2 s-rounded shadow bg-primary">
     <section class="navbar-section">
-      <button class="btn btn-action btn-primary s-circle text-gray" id="pixelfont-toggle"><i class="fas fa-robot fa-lg"></i></button>
+      <!--<button class="btn btn-action btn-primary s-circle text-gray" id="pixelfont-toggle"><i class="fas fa-robot fa-lg"></i></button>-->
     </section>
     <section class="navbar-section">
       {{ if not .IsHome }}
